secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-vol-pod
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: test-secret
  containers:
  - name: test-container
    image: alpine:latest
    command: ["sleep", "9999"]
    volumeMounts:
      - name: secret-volume
        mountPath: /etc/secret-volume
